packages/dartcv/src/core/mat.h

int16_t cv_Mat_get_i16_1(Mat self, int i0);
int16_t cv_Mat_get_i16_2(Mat self, int i0, int i1);
int16_t cv_Mat_get_i16_3(Mat self, int i0, int i1, int i2);
int32_t cv_Mat_get_i32_1(Mat self, int i0);
int32_t cv_Mat_get_i32_2(Mat self, int i0, int i1);
int32_t cv_Mat_get_i32_3(Mat self, int i0, int i1, int i2);
float_t cv_Mat_get_f32_1(Mat self, int i0);
float_t cv_Mat_get_f32_2(Mat self, int i0, int i1);
float_t cv_Mat_get_f32_3(Mat self, int i0, int i1, int i2);
double_t cv_Mat_get_f64_1(Mat self, int i0);
double_t cv_Mat_get_f64_2(Mat self, int i0, int i1);
double_t cv_Mat_get_f64_3(Mat self, int i0, int i1, int i2);
Vec3b* cv_Mat_get_Vec3b(Mat self, int i0, int i1);
Vec4b* cv_Mat_get_Vec4b(Mat self, int i0, int i1);
Vec3s* cv_Mat_get_Vec3s(Mat self, int i0, int i1);
Vec4s* cv_Mat_get_Vec4s(Mat self, int i0, int i1);
Vec3w* cv_Mat_get_Vec3w(Mat self, int i0, int i1);
Vec4w* cv_Mat_get_Vec4w(Mat self, int i0, int i1);
Vec3i* cv_Mat_get_Vec3i(Mat self, int i0, int i1);
Vec4i* cv_Mat_get_Vec4i(Mat self, int i0, int i1);
Vec6i* cv_Mat_get_Vec6i(Mat self, int i0, int i1);
Vec8i* cv_Mat_get_Vec8i(Mat self, int i0, int i1);
Vec3f* cv_Mat_get_Vec3f(Mat self, int i0, int i1);
Vec4f* cv_Mat_get_Vec4f(Mat self, int i0, int i1);
Vec6f* cv_Mat_get_Vec6f(Mat self, int i0, int i1);
Vec3d* cv_Mat_get_Vec3d(Mat self, int i0, int i1);
Vec4d* cv_Mat_get_Vec4d(Mat self, int i0, int i1);
Vec6d* cv_Mat_get_Vec6d(Mat self, int i0, int i1);