packages/dartcv/lib/src/g/core.g.dart


  late final _cv_Mat_get_Vec3bPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec3b> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec3b');
  late final _cv_Mat_get_Vec3b = _cv_Mat_get_Vec3bPtr
      .asFunction<ffi.Pointer<Vec3b> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec3d> cv_Mat_get_Vec3d(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec3d(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec3dPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec3d> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec3d');
  late final _cv_Mat_get_Vec3d = _cv_Mat_get_Vec3dPtr
      .asFunction<ffi.Pointer<Vec3d> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec3f> cv_Mat_get_Vec3f(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec3f(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec3fPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec3f> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec3f');
  late final _cv_Mat_get_Vec3f = _cv_Mat_get_Vec3fPtr
      .asFunction<ffi.Pointer<Vec3f> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec3i> cv_Mat_get_Vec3i(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec3i(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec3iPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec3i> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec3i');
  late final _cv_Mat_get_Vec3i = _cv_Mat_get_Vec3iPtr
      .asFunction<ffi.Pointer<Vec3i> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec3s> cv_Mat_get_Vec3s(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec3s(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec3sPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec3s> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec3s');
  late final _cv_Mat_get_Vec3s = _cv_Mat_get_Vec3sPtr
      .asFunction<ffi.Pointer<Vec3s> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec3w> cv_Mat_get_Vec3w(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec3w(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec3wPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec3w> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec3w');
  late final _cv_Mat_get_Vec3w = _cv_Mat_get_Vec3wPtr
      .asFunction<ffi.Pointer<Vec3w> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec4b> cv_Mat_get_Vec4b(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec4b(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec4bPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec4b> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec4b');
  late final _cv_Mat_get_Vec4b = _cv_Mat_get_Vec4bPtr
      .asFunction<ffi.Pointer<Vec4b> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec4d> cv_Mat_get_Vec4d(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec4d(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec4dPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec4d> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec4d');
  late final _cv_Mat_get_Vec4d = _cv_Mat_get_Vec4dPtr
      .asFunction<ffi.Pointer<Vec4d> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec4f> cv_Mat_get_Vec4f(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec4f(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec4fPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec4f> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec4f');
  late final _cv_Mat_get_Vec4f = _cv_Mat_get_Vec4fPtr
      .asFunction<ffi.Pointer<Vec4f> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec4i> cv_Mat_get_Vec4i(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec4i(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec4iPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec4i> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec4i');
  late final _cv_Mat_get_Vec4i = _cv_Mat_get_Vec4iPtr
      .asFunction<ffi.Pointer<Vec4i> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec4s> cv_Mat_get_Vec4s(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec4s(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec4sPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec4s> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec4s');
  late final _cv_Mat_get_Vec4s = _cv_Mat_get_Vec4sPtr
      .asFunction<ffi.Pointer<Vec4s> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec4w> cv_Mat_get_Vec4w(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec4w(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec4wPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec4w> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec4w');
  late final _cv_Mat_get_Vec4w = _cv_Mat_get_Vec4wPtr
      .asFunction<ffi.Pointer<Vec4w> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec6d> cv_Mat_get_Vec6d(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec6d(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec6dPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec6d> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec6d');
  late final _cv_Mat_get_Vec6d = _cv_Mat_get_Vec6dPtr
      .asFunction<ffi.Pointer<Vec6d> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec6f> cv_Mat_get_Vec6f(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec6f(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec6fPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec6f> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec6f');
  late final _cv_Mat_get_Vec6f = _cv_Mat_get_Vec6fPtr
      .asFunction<ffi.Pointer<Vec6f> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec6i> cv_Mat_get_Vec6i(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec6i(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec6iPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec6i> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec6i');
  late final _cv_Mat_get_Vec6i = _cv_Mat_get_Vec6iPtr
      .asFunction<ffi.Pointer<Vec6i> Function(Mat, int, int)>(isLeaf: true);

  ffi.Pointer<Vec8i> cv_Mat_get_Vec8i(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_Vec8i(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_Vec8iPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Vec8i> Function(Mat, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_Vec8i');
  late final _cv_Mat_get_Vec8i = _cv_Mat_get_Vec8iPtr
      .asFunction<ffi.Pointer<Vec8i> Function(Mat, int, int)>(isLeaf: true);

  double cv_Mat_get_f32_1(
    Mat self,
    int i0,
  ) {
    return _cv_Mat_get_f32_1(
      self,
      i0,
    );
  }

  late final _cv_Mat_get_f32_1Ptr =
      _lookup<ffi.NativeFunction<float_t Function(Mat, ffi.Int)>>(
          'cv_Mat_get_f32_1');
  late final _cv_Mat_get_f32_1 =
      _cv_Mat_get_f32_1Ptr.asFunction<double Function(Mat, int)>(isLeaf: true);

  double cv_Mat_get_f32_2(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_f32_2(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_f32_2Ptr =
      _lookup<ffi.NativeFunction<float_t Function(Mat, ffi.Int, ffi.Int)>>(
          'cv_Mat_get_f32_2');
  late final _cv_Mat_get_f32_2 = _cv_Mat_get_f32_2Ptr
      .asFunction<double Function(Mat, int, int)>(isLeaf: true);

  double cv_Mat_get_f32_3(
    Mat self,
    int i0,
    int i1,
    int i2,
  ) {
    return _cv_Mat_get_f32_3(
      self,
      i0,
      i1,
      i2,
    );
  }

  late final _cv_Mat_get_f32_3Ptr = _lookup<
          ffi.NativeFunction<float_t Function(Mat, ffi.Int, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_f32_3');
  late final _cv_Mat_get_f32_3 = _cv_Mat_get_f32_3Ptr
      .asFunction<double Function(Mat, int, int, int)>(isLeaf: true);

  double cv_Mat_get_f64_1(
    Mat self,
    int i0,
  ) {
    return _cv_Mat_get_f64_1(
      self,
      i0,
    );
  }

  late final _cv_Mat_get_f64_1Ptr =
      _lookup<ffi.NativeFunction<double_t Function(Mat, ffi.Int)>>(
          'cv_Mat_get_f64_1');
  late final _cv_Mat_get_f64_1 =
      _cv_Mat_get_f64_1Ptr.asFunction<double Function(Mat, int)>(isLeaf: true);

  double cv_Mat_get_f64_2(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_f64_2(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_f64_2Ptr =
      _lookup<ffi.NativeFunction<double_t Function(Mat, ffi.Int, ffi.Int)>>(
          'cv_Mat_get_f64_2');
  late final _cv_Mat_get_f64_2 = _cv_Mat_get_f64_2Ptr
      .asFunction<double Function(Mat, int, int)>(isLeaf: true);

  double cv_Mat_get_f64_3(
    Mat self,
    int i0,
    int i1,
    int i2,
  ) {
    return _cv_Mat_get_f64_3(
      self,
      i0,
      i1,
      i2,
    );
  }

  late final _cv_Mat_get_f64_3Ptr = _lookup<
          ffi
          .NativeFunction<double_t Function(Mat, ffi.Int, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_f64_3');
  late final _cv_Mat_get_f64_3 = _cv_Mat_get_f64_3Ptr
      .asFunction<double Function(Mat, int, int, int)>(isLeaf: true);

  int cv_Mat_get_i16_1(
    Mat self,
    int i0,
  ) {
    return _cv_Mat_get_i16_1(
      self,
      i0,
    );
  }

  late final _cv_Mat_get_i16_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Int16 Function(Mat, ffi.Int)>>(
          'cv_Mat_get_i16_1');
  late final _cv_Mat_get_i16_1 =
      _cv_Mat_get_i16_1Ptr.asFunction<int Function(Mat, int)>(isLeaf: true);

  int cv_Mat_get_i16_2(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_i16_2(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_i16_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Int16 Function(Mat, ffi.Int, ffi.Int)>>(
          'cv_Mat_get_i16_2');
  late final _cv_Mat_get_i16_2 = _cv_Mat_get_i16_2Ptr
      .asFunction<int Function(Mat, int, int)>(isLeaf: true);

  int cv_Mat_get_i16_3(
    Mat self,
    int i0,
    int i1,
    int i2,
  ) {
    return _cv_Mat_get_i16_3(
      self,
      i0,
      i1,
      i2,
    );
  }

  late final _cv_Mat_get_i16_3Ptr = _lookup<
          ffi
          .NativeFunction<ffi.Int16 Function(Mat, ffi.Int, ffi.Int, ffi.Int)>>(
      'cv_Mat_get_i16_3');
  late final _cv_Mat_get_i16_3 = _cv_Mat_get_i16_3Ptr
      .asFunction<int Function(Mat, int, int, int)>(isLeaf: true);

  int cv_Mat_get_i32_1(
    Mat self,
    int i0,
  ) {
    return _cv_Mat_get_i32_1(
      self,
      i0,
    );
  }

  late final _cv_Mat_get_i32_1Ptr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Mat, ffi.Int)>>(
          'cv_Mat_get_i32_1');
  late final _cv_Mat_get_i32_1 =
      _cv_Mat_get_i32_1Ptr.asFunction<int Function(Mat, int)>(isLeaf: true);

  int cv_Mat_get_i32_2(
    Mat self,
    int i0,
    int i1,
  ) {
    return _cv_Mat_get_i32_2(
      self,
      i0,
      i1,
    );
  }

  late final _cv_Mat_get_i32_2Ptr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Mat, ffi.Int, ffi.Int)>>(
          'cv_Mat_get_i32_2');
  late final _cv_Mat_get_i32_2 = _cv_Mat_get_i32_2Ptr
      .asFunction<int Function(Mat, int, int)>(isLeaf: true);

  int cv_Mat_get_i32_3(
    Mat self,
    int i0,
    int i1,
    int i2,
  ) {
    return _cv_Mat_get_i32_3(
      self,
      i0,
      i1,
      i2,
    );
  }
